feat: implement recorder and replayer (#405)
* implement recorder and replayer

* fix docs

* buffering records

* make recorder cli

* fix replayer to read all files in record directory

* remove recorder from simulator

* fix replayer test

* fix docs

* add timeout option

* fix recordFilePath to recordDirPath

* fix docs

* fix for lint

* add sequence diagram to doc

* rename bufferSize to recordBatchCapacity

* run record goroutine before starting informer

* remove unrequired defer

* prevent fd leak when error happens in writeToFile

* first unmarshal all json files when replaying

* fix doc

* remove unrequired default in select

* use flag.XXXVar

* avoid overwriting cancel

* make RecordEvent private

* add default clause again

* not to record unrequired field for delete events

* make format

* wip

* fix encoding problem

* rename recordDirPath to recordFilePath

* make format

* fix docs

* make sure the file is recreated

* wip

* bulk insert records

* fix docs

* delete unrequired kubeconfig

* fix comment

* fix for loop to flush buffer

* fix for loop to flush buffer

* resolve review comments

* fix file handling

* use slice to buffer events

* resolved review comments

* update simulator-server-config.md

--- a/simulator/config.yaml
+++ b/simulator/config.yaml
@@ -19,8 +19,8 @@ etcdURL: "http://127.0.0.1:2379"
 corsAllowedOriginList:
   - "http://localhost:3000"
 
-# This is for the beta feature "One-shot importing cluster's resources"
-# and "Continuous syncing cluster's resources".
+# This is for the beta feature "One-shot importing cluster's resources",
+# "Continuous syncing cluster's resources" and "Replaying cluster's events".
 # This variable is used to find Kubeconfig required to access your
 # cluster for importing resources to scheduler simulator.
 kubeConfig: "/kubeconfig.yaml"
@@ -38,12 +38,24 @@ kubeSchedulerConfigPath: ""
 # This variable indicates whether the simulator will
 # import resources from a user cluster specified by kubeConfig.
 # Note that it only imports the resources once when the simulator is started.
-# You cannot make both externalImportEnabled and resourceSyncEnabled true because those features would be conflicted.
+# You cannot make two or more of externalImportEnabled, resourceSyncEnabled and replayEnabled true
+# because those features would be conflicted.
 # This is still a beta feature.
 externalImportEnabled: false
 
 # This variable indicates whether the simulator will
 # keep syncing resources from an user cluster's or not.
-# You cannot make both externalImportEnabled and resourceSyncEnabled true because those features would be conflicted.
+# You cannot make two or more of externalImportEnabled, resourceSyncEnabled and replayEnabled true
+# because those features would be conflicted.
 # Note, this is still a beta feature.
 resourceSyncEnabled: false
+
+# This variable indicates whether the simulator will
+# replay events recorded in the file specified by recordFilePath.
+# You cannot make two or more of externalImportEnabled, resourceSyncEnabled and replayEnabled true
+# because those features would be conflicted.
+# Note, this is still a beta feature.
+replayEnabled: false
+
+# The path to a file where the record files are stored.
+recordFilePath: "/record.jsonl"
